--- a/index.html
+++ b/index.html
@@ -26,36 +26,42 @@
       </div>
     </section>
     <section class="elements">
-      <ul class="element">
+      <ul class="elements__container">
         <li class="element__item">
           <img src="./images/yosemite-valley.jpg" alt="yosemite-valley" class="element__image">
-          <h3 class="element__title">Yosemite Valley</h3>
-          <div class="element__heart"></div>
+          <div class="element__container">
+            <h3 class="element__title">Yosemite Valley<img src="./images/heart.svg" class="element__heart"></h3>
+          </div>
         </li>
         <li class="element__item">
           <img src="./images/lake-louise.png" alt="lake-louise" class="element__image">
-          <h3 class="element__title">Lake Louise</h3>
-          <div class="element__heart"></div>
+          <div class="element__container">
+            <h3 class="element__title">Lake Louise<img src="./images/heart.svg" class="element__heart"></h3>
+          </div>
         </li>
         <li class="element__item">
           <img src="./images/bald-mountains.png" alt="bald-mountains" class="element__image">
-          <h3 class="element__title">Bald Mountains</h3>
-          <div class="element__heart"></div>
+          <div class="element__container">
+            <h3 class="element__title">Bald Mountains<img src="./images/heart.svg" class="element__heart"></h3>
+          </div>
         </li>
         <li class="element__item">
           <img src="./images/latemar.png" alt="latemar" class="element__image">
-          <h3 class="element__title">Latemar</h3>
-          <div class="element__heart"></div>
+          <div class="element__container">
+            <h3 class="element__title">Latemar<img src="./images/heart.svg" class="element__heart"></h3>
+          </div>
         </li>
         <li class="element__item">
           <img src="./images/vanoise-national.png" alt="vanoise-national" class="element__image">
-          <h3 class="element__title">Vanoise National Park</h3>
-          <div class="element__heart"></div>
+          <div class="element__container">
+            <h3 class="element__title">Vanoise National Park<img src="./images/heart.svg" class="element__heart"></h3>
+          </div>
         </li>
         <li class="element__item">
           <img src="./images/lago-di-braies.png" alt="lago-di-braies" class="element__image">
-          <h3 class="element__title">Lago di Braies</h3>
-          <div class="element__heart"></div>
+          <div class="element__container">
+            <h3 class="element__title">Lago di Braies<img src="./images/heart.svg" class="element__heart"></h3>
+          </div>
         </li>
       </ul>
     </section>
