--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section class="form"></section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer"><p class="footer__copyright">&copy; 2020 Around The U.S.</p></footer>
   <script src="/blocks/javascript/scripts.js"></script>
 </body>
 
