Updated Card Button

--- a/index.html
+++ b/index.html
@@ -30,37 +30,42 @@
         <li class="element__item">
           <img src="./images/yosemite-valley.jpg" alt="yosemite-valley" class="element__image">
           <div class="element__container">
-            <h3 class="element__title">Yosemite Valley<img src="./images/heart.svg" class="element__heart"></h3>
+            <button class="element__heart" aria-label="Like"></button>
+            <h3 class="element__title">Yosemite Valley</h3>
           </div>
         </li>
         <li class="element__item">
           <img src="./images/lake-louise.png" alt="lake-louise" class="element__image">
           <div class="element__container">
-            <h3 class="element__title">Lake Louise<img src="./images/heart.svg" class="element__heart"></h3>
-          </div>
+            <button class="element__heart" aria-label="Like"></button>
+            <h3 class="element__title">Lake Louise</h3>
         </li>
         <li class="element__item">
           <img src="./images/bald-mountains.png" alt="bald-mountains" class="element__image">
           <div class="element__container">
-            <h3 class="element__title">Bald Mountains<img src="./images/heart.svg" class="element__heart"></h3>
+            <button class="element__heart" aria-label="Like"></button>
+            <h3 class="element__title">Bald Mountains</h3>
           </div>
         </li>
         <li class="element__item">
           <img src="./images/latemar.png" alt="latemar" class="element__image">
           <div class="element__container">
-            <h3 class="element__title">Latemar<img src="./images/heart.svg" class="element__heart"></h3>
+            <button class="element__heart" aria-label="Like"></button>
+            <h3 class="element__title">Latemar</h3>
           </div>
         </li>
         <li class="element__item">
           <img src="./images/vanoise-national.png" alt="vanoise-national" class="element__image">
           <div class="element__container">
-            <h3 class="element__title">Vanoise National Park<img src="./images/heart.svg" class="element__heart"></h3>
+            <button class="element__heart" aria-label="Like"></button>
+            <h3 class="element__title">Vanoise National Park</h3>
           </div>
         </li>
         <li class="element__item">
           <img src="./images/lago-di-braies.png" alt="lago-di-braies" class="element__image">
           <div class="element__container">
-            <h3 class="element__title">Lago di Braies<img src="./images/heart.svg" class="element__heart"></h3>
+            <button class="element__heart" aria-label="Like"></button>
+            <h3 class="element__title">Lago di Braies</h3>
           </div>
         </li>
       </ul>
@@ -70,5 +75,3 @@
   <footer class="footer"><p class="footer__copyright">&copy; 2020 Around The U.S.</p></footer>
   <script src="/blocks/javascript/scripts.js"></script>
 </body>
-
-</html>
