--- a/index.html
+++ b/index.html
@@ -82,12 +82,10 @@
         <h2 class="form__title">Edit profile</h2>
         <label class="form__label">
           <input type="text" class="form__input form__input_type_name" placeholder="Name">
-        </label>
-        <label class="form__label">
           <input type="text" class="form__input form__input_type_description" placeholder="About me">
         </label>
         <button class="modal__btn-close"></button>
-        <button type="submit">Save</button>
+        <button class="modal__submit" type="submit">Save</button>
     </div>
     </form>
   </div>
