--- a/index.html
+++ b/index.html
@@ -89,5 +89,5 @@
     </div>
     </form>
   </div>
-  <script src="/blocks/javascript/scripts.js"></script>
+  <script src="/pages/index.js"></script>
 </body>
