--- a/index.html
+++ b/index.html
@@ -76,7 +76,20 @@
     <p class="footer__copyright">&copy; 2020 Around The U.S.</p>
   </footer>
   <!-- //Modal Content// -->
-  <div class="modal modal_open">
+  <form class="form form_opened" id="form-edit">
+    <div class="form__container">
+      <button type="button" aria-label="Close Form" class="form__btn-close btn-animate"></button>
+        <h2 class="form__title">Edit profile</h2>
+        <label class="form__input-field">
+            <input id="form-name" name="primary" class="form__input form__input_type_name" type="text" placeholder="Name" required minlength="2" maxlength="40" pattern="[A-Za-z -]*">
+        </label>
+        <label class="form__input-field">
+            <input id="form-description" name="secondary" class="form__input form__input_type_description" type="text" placeholder="About me" required minlength="2" maxlength="200">
+        </label>
+        <button type="submit" class="form__save-button btn-animate">Save</button>
+    </div>
+</form>
+  <!-- <div class="modal modal_open">
     <div class="modal__container">
       <form action="#" class="form">
         <h2 class="form__title">Edit profile</h2>
@@ -88,6 +101,6 @@
         <button class="modal__submit" type="submit">Save</button>
     </div>
     </form>
-  </div>
+  </div> -->
   <script src="/pages/index.js"></script>
 </body>
