--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="header__logo"></div>
   </header>
   <main>
+    <!-- //Profile// -->
     <div class="profile">
       <div class="profile__container">
         <img class="profile__avatar" src='./images/profile-pic.jpg' alt='Profile Image'>
@@ -22,9 +23,10 @@
           <p class="profile__description">Explorer</p>
         </div>
         <button class="profile__edit-button btn-animate"></button>
+        <button class="profile__add-button btn-animate"></button>
       </div>
-      <button class="profile__add-button btn-animate"></button>
     </div>
+    <!-- //Cards// -->
     <section class="elements">
       <ul class="elements__container">
         <li class="element__item">
@@ -39,6 +41,7 @@
           <div class="element__container">
             <button class="element__heart" aria-label="Like"></button>
             <h3 class="element__title">Lake Louise</h3>
+          </div>
         </li>
         <li class="element__item">
           <img src="./images/bald-mountains.png" alt="bald-mountains" class="element__image">
@@ -75,7 +78,7 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2020 Around The U.S.</p>
   </footer>
-  <!-- //Modal Content// -->
+  <!-- //Form Content// -->
   <div class="popup popup_open">
     <form action="#" class="form" id="myForm">
       <div class="form__container">
