--- a/index.html
+++ b/index.html
@@ -27,48 +27,48 @@
       </div>
     </div>
     <!-- //Cards// -->
-    <section class="elements">
-      <ul class="elements__container">
-        <li class="element__item">
-          <img src="./images/yosemite-valley.jpg" alt="yosemite-valley" class="element__image">
-          <div class="element__container">
-            <button class="element__heart" aria-label="Like"></button>
-            <h3 class="element__title">Yosemite Valley</h3>
+    <section class="cards">
+      <ul class="cards__container">
+        <li class="card__item">
+          <img src="./images/yosemite-valley.jpg" alt="yosemite-valley" class="card__image">
+          <div class="card__container">
+            <button class="card__heart" aria-label="Like"></button>
+            <h3 class="card__title">Yosemite Valley</h3>
           </div>
         </li>
-        <li class="element__item">
-          <img src="./images/lake-louise.png" alt="lake-louise" class="element__image">
-          <div class="element__container">
-            <button class="element__heart" aria-label="Like"></button>
-            <h3 class="element__title">Lake Louise</h3>
+        <li class="card__item">
+          <img src="./images/lake-louise.png" alt="lake-louise" class="card__image">
+          <div class="card__container">
+            <button class="card__heart" aria-label="Like"></button>
+            <h3 class="card__title">Lake Louise</h3>
           </div>
         </li>
-        <li class="element__item">
-          <img src="./images/bald-mountains.png" alt="bald-mountains" class="element__image">
-          <div class="element__container">
-            <button class="element__heart" aria-label="Like"></button>
-            <h3 class="element__title">Bald Mountains</h3>
+        <li class="card__item">
+          <img src="./images/bald-mountains.png" alt="bald-mountains" class="card__image">
+          <div class="card__container">
+            <button class="card__heart" aria-label="Like"></button>
+            <h3 class="card__title">Bald Mountains</h3>
           </div>
         </li>
-        <li class="element__item">
-          <img src="./images/latemar.png" alt="latemar" class="element__image">
-          <div class="element__container">
-            <button class="element__heart" aria-label="Like"></button>
-            <h3 class="element__title">Latemar</h3>
+        <li class="card__item">
+          <img src="./images/latemar.png" alt="latemar" class="card__image">
+          <div class="card__container">
+            <button class="card__heart" aria-label="Like"></button>
+            <h3 class="card__title">Latemar</h3>
           </div>
         </li>
-        <li class="element__item">
-          <img src="./images/vanoise-national.png" alt="vanoise-national" class="element__image">
-          <div class="element__container">
-            <button class="element__heart" aria-label="Like"></button>
-            <h3 class="element__title">Vanoise National Park</h3>
+        <li class="card__item">
+          <img src="./images/vanoise-national.png" alt="vanoise-national" class="card__image">
+          <div class="card__container">
+            <button class="card__heart" aria-label="Like"></button>
+            <h3 class="card__title">Vanoise National Park</h3>
           </div>
         </li>
-        <li class="element__item">
-          <img src="./images/lago-di-braies.png" alt="lago-di-braies" class="element__image">
-          <div class="element__container">
-            <button class="element__heart" aria-label="Like"></button>
-            <h3 class="element__title">Lago di Braies</h3>
+        <li class="card__item">
+          <img src="./images/lago-di-braies.png" alt="lago-di-braies" class="card__image">
+          <div class="card__container">
+            <button class="card__heart" aria-label="Like"></button>
+            <h3 class="card__title">Lago di Braies</h3>
           </div>
         </li>
       </ul>
