--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p class="footer__copyright">&copy; 2020 Around The U.S.</p>
   </footer>
   <!-- //Form Content// -->
-  <div class="popup popup_open">
+  <div class="popup_open">
     <form action="#" class="form" id="myForm">
       <div class="form__container">
         <button type="button" aria-label="Close Form" class="form__btn-close btn-animate"></button>
