--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     <p class="footer__copyright">&copy; 2020 Around The U.S.</p>
   </footer>
   <!-- //Form Content// -->
-  <div class="popup_open">
+  <div class="modal modal_open">
+    <div class="modal__container">
     <form action="#" class="form" id="myForm">
-      <div class="form__container">
-        <button type="button" aria-label="Close Form" class="form__btn-close btn-animate"></button>
+        <button type="button" aria-label="Close Form" class="modal__btn-close btn-animate"></button>
         <h2 class="form__title">Edit profile</h2>
         <label class="form__input-field">
           <input id="form-name" name="primary" class="form__input form__input_type_name" type="text" placeholder="Name"
@@ -93,8 +93,8 @@
             placeholder="About me" required>
         </label>
         <button type="submit" class="form__save-button btn-animate">Save</button>
-      </div>
     </form>
+  </div>
   </div>
   <script src="/pages/index.js"></script>
 </body>
