--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p class="footer__copyright">&copy; 2020 Around The U.S.</p>
   </footer>
   <!-- //Form Content// -->
-  <div class="modal modal_open">
+  <div class="modal">
     <div class="modal__container">
     <form action="#" class="form" id="myForm">
         <button type="button" aria-label="Close Form" class="modal__btn-close btn-animate"></button>
