--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
       </form>
     </div>
   </div>
-  <script src="/pages/index.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
