--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
   <title>Around The U.S.</title>
-  <link rel="stylesheet" type="text/css" href="./pages/index.css" />
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="page">
