--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,60 +15,60 @@
   </header>
   <main>
     <!-- //Profile// -->
-    <div class="profile">
+    <section class="profile">
       <div class="profile__container">
         <img class="profile__avatar" src='./images/profile-pic.jpg' alt='Profile Image'>
         <div class="profile__data">
           <h1 class="profile__name">Jacques Cousteau</h1>
           <p class="profile__description">Explorer</p>
         </div>
-        <button class="profile__edit-button btn-animate"></button>
-        <button class="profile__add-button btn-animate"></button>
+        <button class="profile__edit-button btn-animate" aria-label="Edit" type="button"></button>
+        <button class="profile__add-button btn-animate" aria-label="Add" type="button"></button>
       </div>
-    </div>
+    </section>
     <!-- //Cards// -->
     <section class="cards">
       <ul class="cards__container">
         <li class="card">
           <img src="./images/yosemite-valley.jpg" alt="yosemite-valley" class="card__image">
           <div class="card__label">
-            <button class="card__button" aria-label="Like"></button>
-            <h3 class="card__title">Yosemite Valley</h3>
+            <button class="card__button" aria-label="Like" type="button"></button>
+            <h2 class="card__title">Yosemite Valley</h2>
           </div>
         </li>
         <li class="card">
           <img src="./images/lake-louise.png" alt="lake-louise" class="card__image">
           <div class="card__label">
             <button class="card__button" aria-label="Like"></button>
-            <h3 class="card__title">Lake Louise</h3>
+            <h2 class="card__title">Lake Louise</h2>
           </div>
         </li>
         <li class="card">
           <img src="./images/bald-mountains.png" alt="bald-mountains" class="card__image">
           <div class="card__label">
             <button class="card__button" aria-label="Like"></button>
-            <h3 class="card__title">Bald Mountains</h3>
+            <h2 class="card__title">Bald Mountains</h2>
           </div>
         </li>
         <li class="card">
           <img src="./images/latemar.png" alt="latemar" class="card__image">
           <div class="card__label">
             <button class="card__button" aria-label="Like"></button>
-            <h3 class="card__title">Latemar</h3>
+            <h2 class="card__title">Latemar</h2>
           </div>
         </li>
         <li class="card">
           <img src="./images/vanoise-national.png" alt="vanoise-national" class="card__image">
           <div class="card__label">
             <button class="card__button" aria-label="Like"></button>
-            <h3 class="card__title">Vanoise National Park</h3>
+            <h2 class="card__title">Vanoise National Park</h2>
           </div>
         </li>
         <li class="card">
           <img src="./images/lago-di-braies.png" alt="lago-di-braies" class="card__image">
           <div class="card__label">
             <button class="card__button" aria-label="Like"></button>
-            <h3 class="card__title">Lago di Braies</h3>
+            <h2 class="card__title">Lago di Braies</h2>
           </div>
         </li>
       </ul>
@@ -81,17 +81,13 @@
   <!-- //Form Content// -->
   <div class="modal">
     <div class="modal__container">
-      <form action="#" class="form" id="myForm">
+      <form action="#" class="form" method="GET">
         <button type="button" aria-label="Close Form" class="modal__btn-close btn-animate"></button>
-        <h2 class="form__title">Edit profile</h2>
-        <label class="form__input-field">
-          <input id="form-name" name="primary" class="form__input form__input_type_name" type="text" placeholder="Name"
+        <h3 class="form__title">Edit profile</h3>
+          <input name="primary" class="form__input form__input_type_name" type="text" placeholder="Name"
             required>
-        </label>
-        <label class="form__input-field">
-          <input id="form-description" name="secondary" class="form__input form__input_type_description" type="text"
+          <input name="secondary" class="form__input form__input_type_description" type="text"
             placeholder="About me" required>
-        </label>
         <button type="submit" class="form__save-button btn-animate">Save</button>
       </form>
     </div>
