Updated Profile Alignment and Form method

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <!-- //Form Content// -->
   <div class="modal">
     <div class="modal__container">
-      <form action="#" class="form" method="GET" name="myForm">
+      <form action="#" class="form" method="POST" name="myForm">
         <button type="button" aria-label="Close Form" class="modal__btn-close btn-animate"></button>
         <h3 class="form__title">Edit profile</h3>
           <input name="primary" class="form__input form__input_type_name" type="text" placeholder="Name"
