--- a/index.html
+++ b/index.html
@@ -28,49 +28,7 @@
     </section>
     <!-- //Cards// -->
     <section class="cards">
-      <ul class="cards__container">
-        <li class="card">
-          <img src="./images/yosemite-valley.jpg" alt="yosemite-valley" class="card__image">
-          <button class="card__button" aria-label="Like" type="button"></button>
-          <div class="card__label">
-            <h2 class="card__title">Yosemite Valley</h2>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/lake-louise.png" alt="lake-louise" class="card__image">
-          <button class="card__button" aria-label="Like"></button>
-          <div class="card__label">
-            <h2 class="card__title">Lake Louise</h2>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/bald-mountains.png" alt="bald-mountains" class="card__image">
-          <button class="card__button" aria-label="Like"></button>
-          <div class="card__label">
-            <h2 class="card__title">Bald Mountains</h2>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/latemar.png" alt="latemar" class="card__image">
-          <button class="card__button" aria-label="Like"></button>
-          <div class="card__label">
-            <h2 class="card__title">Latemar</h2>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/vanoise-national.png" alt="vanoise-national" class="card__image">
-          <button class="card__button" aria-label="Like"></button>
-          <div class="card__label">
-            <h2 class="card__title">Vanoise National Park</h2>
-          </div>
-        </li>
-        <li class="card">
-          <img src="./images/lago-di-braies.png" alt="lago-di-braies" class="card__image">
-          <button class="card__button" aria-label="Like"></button>
-          <div class="card__label">
-            <h2 class="card__title">Lago di Braies</h2>
-          </div>
-        </li>
+      <ul class="cards__list">
       </ul>
     </section>
   </main>
@@ -78,20 +36,54 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2020 Around The U.S.</p>
   </footer>
-  <!-- //Form Content// -->
-  <div class="modal">
-    <div class="modal__container">
+  <!-- //popup for Edit Profile// -->
+  <div class="popup popup_type_edit-profile">
+    <div class="popup__container">
       <form action="#" class="form" method="POST" name="myForm">
-        <button type="button" aria-label="Close Form" class="modal__btn-close btn-animate"></button>
+        <button type="button" aria-label="Close Form" class="popup__btn-close btn-animate"></button>
         <h3 class="form__title">Edit profile</h3>
-          <input name="primary" class="form__input form__input_type_name" type="text" placeholder="Name"
-            required>
-          <input name="secondary" class="form__input form__input_type_description" type="text"
-            placeholder="About me" required>
+        <input name="primary" class="form__input form__input_type_name" type="text" placeholder="Name" required>
+        <input name="secondary" class="form__input form__input_type_description" type="text" placeholder="About me"
+          required>
         <button type="submit" class="form__save-button btn-animate">Save</button>
       </form>
     </div>
   </div>
+  <!-- //popup for Card Template//-->
+  <div class="popup popup_type_add-card">
+    <div class="popup__container">
+      <form action="#" class="form" method="POST" name="myCardForm">
+        <button type="button" aria-label="Close Form" class="popup__btn-close btn-animate"></button>
+        <h3 class="form__title">New Place</h3>
+        <input name="primary" class="form__input form__input_type_title" type="text" placeholder="Title" required>
+        <input name="secondary" class="form__input form__input_type_url" type="url" placeholder="Image link" required>
+        <button type="submit" class="form__save-button btn-animate">Create</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="popup popup_type_image">
+    <div class="popup__container">
+      <button type="button" aria-label="Close Form" class="popup__btn-close btn-animate"></button>
+      <figure class="popup__figure">
+        <img class="popup__image" src= "" alt="">
+        <figcaption class="popup__image-title"></figcaption>>
+      </figure>
+      </form>
+    </div>
+  </div>
+
+  <!-- //Card Template//-->
+  <template class="card-template">
+    <li class="card">
+      <button class="card__delete-button" aria-label="Like" type="button"></button>
+      <div class="card__image"></div>
+      <button class="card__like-button" aria-label="Like" type="button"></button>
+      <div class="card__label">
+        <h2 class="card__title"></h2>
+      </div>
+    </li>
+  </template>
   <script src="./scripts/script.js"></script>
 </body>
 
