--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   </div>
 
   <div class="popup popup_type_image">
-    <div class="popup__container">
+    <div class="popup__image-container">
       <button type="button" aria-label="Close Form" class="popup__btn-close btn-animate"></button>
       <figure class="popup__figure">
-        <img class="popup__image" src= "" alt="">
-        <figcaption class="popup__image-title"></figcaption>>
+        <img class="popup__image" src="" alt="">
+        <figcaption class="popup__image-title"></figcaption>
       </figure>
       </form>
     </div>
