--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="popup__image-container">
       <button type="button" aria-label="Close Form" class="popup__btn-close btn-animate"></button>
       <figure class="popup__figure">
-        <img class="popup__image" src="" alt="">
+        <img class="popup__image">
         <figcaption class="popup__image-title"></figcaption>
       </figure>
       </form>
