Updated Add Card  JS

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h3 class="form__title">New Place</h3>
         <input name="primary" class="form__input form__input_type_title" type="text" placeholder="Title" required>
         <input name="secondary" class="form__input form__input_type_url" type="url" placeholder="Image link" required>
-        <button type="submit" class="form__save-button btn-animate">Create</button>
+        <button type="submit" class="form__save-button btn-animate" id="myCreateBtn">Create</button>
       </form>
     </div>
   </div>
