Updated Add Card

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- //popup for Card Template//-->
   <div class="popup popup_type_add-card">
     <div class="popup__container">
-      <form action="#" class="form" method="POST" name="myCardForm">
+      <form action="#" class="form form_add-card" method="POST" name="myCardForm">
         <button type="button" aria-label="Close Form" class="popup__btn-close btn-animate"></button>
         <h3 class="form__title">New Place</h3>
         <input name="primary" class="form__input form__input_type_title" type="text" placeholder="Title" required>
