--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       </div>
     </li>
   </template>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/script.js"></script>
-  <script src="./scripts/validation.js"></script>
 </body>
 
 </html>
