--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 
   <!-- //Card Template//-->
-  <template class="card-template">
+  <template class="card-template" id="card-template">
     <li class="card">
       <button class="card__delete-button" aria-label="Like" type="button"></button>
       <div class="card__image"></div>
@@ -93,8 +93,9 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/script.js"></script>
+  <script type ="module" src="./scripts/Card.js"></script>
+  <script type ="module" src="./scripts/FormValidator.js"></script>
+  <script type ="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
