--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- //popup for Edit Profile// -->
   <div class="popup popup_type_edit-profile">
     <div class="popup__container">
-      <form action="#" class="form" method="POST" name="myForm">
+      <form action="#" class="form form_edit" method="POST" name="myForm">
         <button type="button" aria-label="Close Form" class="popup__btn-close"></button>
         <h3 class="form__title">Edit profile</h3>
         <input id="profile-name" name="primary" class="form__input form__input_type_name" type="text" minlength="2" maxlength="40"
