--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <!-- //Profile// -->
     <section class="profile">
       <div class="profile__container">
-        <img class="profile__avatar" src='../src/images/profile-pic.jpg' alt='Profile Image'>
+        <img class="profile__avatar" src="<%=require('./images/profile-pic.jpg')%>" alt='Profile Image'>
         <div class="profile__data">
           <h1 class="profile__name">Jacques Cousteau</h1>
           <p class="profile__description">Explorer</p>
