--- a/src/index.html
+++ b/src/index.html
@@ -93,14 +93,14 @@
       </div>
     </li>
   </template>
-  <script type ="module" src="./components/Card.js"></script>
-  <script type ="module" src="./components/FormValidator.js"></script>
-  <script type ="module" src="./components/index.js"></script>
-  <script type ="module" src="./components/Popup.js"></script>
-  <script type ="module" src="./components/PopupWithForm.js"></script>
-  <script type ="module" src="./components/PopupWithImage.js"></script>
-  <script type ="module" src="./components/Section.js"></script>
-  <script type ="module" src="./components/UserInfo.js"></script>
+  <script type ="module" src="/components/Card.js"></script>
+  <script type ="module" src="/components/FormValidator.js"></script>
+  <script type ="module" src="/components/index.js"></script>
+  <script type ="module" src="/components/Popup.js"></script>
+  <script type ="module" src="/components/PopupWithForm.js"></script>
+  <script type ="module" src="/components/PopupWithImage.js"></script>
+  <script type ="module" src="/components/Section.js"></script>
+  <script type ="module" src="/components/UserInfo.js"></script>
 </body>
 
 </html>
